--- a/app/Nav/Nav.module.css
+++ b/app/Nav/Nav.module.css
@@ -9,7 +9,7 @@
 }
 .li{
     margin: 1rem;
-    font-size: 2rem;
+    font-size: 100%;
     color: rgb(244, 0, 0);
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
