--- a/app/tareas/tareas.module.css
+++ b/app/tareas/tareas.module.css
@@ -4,3 +4,12 @@
     justify-content: center;
     padding-top: 2rem;
 }
+.high{
+    background-color: rgb(252, 173, 173);
+}
+.medium{
+    background-color: rgb(228, 228, 115);
+}
+.low{
+    background-color: rgb(148, 148, 238);
+}
